--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <title>Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="Sergey Pozhilov (GetTemplate.com)" />
-        
         <title>Progressus - Free business bootstrap template by GetTemplate</title>
-
         <link rel="shortcut icon" href="{{ asset('assets/images/gt_favicon.png') }}" />
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" 
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script
             src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
             integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
@@ -18,7 +17,6 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
         <link rel="stylesheet" href="{{ asset('assets/css/font-awesome.min.css') }}" />
-
         <!-- Custom styles for our template -->
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-theme.css') }}" media="screen" >
         <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
@@ -36,7 +34,6 @@
             </div>
         </header>
         <!-- /Header -->
-
         <!-- Intro -->
         <div class="container text-center">
             <br> <br>
@@ -46,14 +43,11 @@
                 the chicken was involved; the pig was committed.
             </p>
         </div>
-        <!-- /Intro-->
-            
+        <!-- /Intro-->        
         <!-- Highlights - jumbotron -->
         <div class="jumbotron top-space">
             <div class="container">
-                
                 <h3 class="text-center thin">Reasons to use this template</h3>
-                
                 <div class="row">
                     <div class="col-md-3 col-sm-6 highlight">
                         <div class="h-caption"><h4><i class="fa fa-cogs fa-5"></i>Bootstrap-powered</h4></div>
@@ -79,31 +73,30 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, excepturi, maiores, dolorem quasi reprehenderit illo accusamus nulla minima repudiandae quas ducimus reiciendis odio sequi atque temporibus facere corporis eos expedita? </p>
                         </div>
                     </div>
-                </div> <!-- /row  -->
-            
+                </div>
+                <!-- /row  -->
             </div>
         </div>
         <!-- /Highlights -->
-
         <!-- container -->
         <div class="container">
 
-            <h2 class="text-center top-space">Frequently Asked Questions</h2>
-            <br>
+                <h2 class="text-center top-space">Frequently Asked Questions</h2>
+                <br>
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3>Which code editor would you recommend?</h3>
-                    <p>I'd highly recommend you <a href="http://www.sublimetext.com/">Sublime Text</a> - a free to try text editor which I'm using daily. Awesome tool!</p>
-                </div>
-                <div class="col-sm-6">
-                    <h3>Nice header. Where do I find more images like that one?</h3>
-                    <p>
-                        Well, there are thousands of stock art galleries, but personally, 
-                        I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
-                        and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
-                </div>
-            </div> <!-- /row -->
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h3>Which code editor would you recommend?</h3>
+                        <p>I'd highly recommend you <a href="http://www.sublimetext.com/">Sublime Text</a> - a free to try text editor which I'm using daily. Awesome tool!</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Nice header. Where do I find more images like that one?</h3>
+                        <p>
+                            Well, there are thousands of stock art galleries, but personally, 
+                            I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
+                            and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
+                    </div>
+                </div> <!-- /row -->
 
             <div class="row">
                 <div class="col-sm-6">
@@ -118,14 +111,12 @@
                     <p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please note, my services are not cheap.</p>
                 </div>
             </div> <!-- /row -->
-
             <div class="jumbotron top-space">
                 <h4>Dicta, nostrum nemo soluta sapiente sit dolor quae voluptas quidem doloribus recusandae facere magni ullam suscipit sunt atque rerum eaque iusto facilis esse nam veniam incidunt officia perspiciatis at voluptatibus. Libero, aliquid illum possimus numquam fuga.</h4>
                 <p class="text-right"><a class="btn btn-primary btn-large">Learn more »</a></p>
             </div>
-
-    </div>	<!-- /container -->
-        
+        </div>
+        <!-- /container -->        
         <!-- Social links. @TODO: replace by link/instructions in template -->
         <section id="social">
             <div class="container">
@@ -142,14 +133,10 @@
             </div>
         </section>
         <!-- /social links -->
-
-
         <footer id="footer" class="top-space">
-
             <div class="footer1">
                 <div class="container">
-                    <div class="row">
-                        
+                    <div class="row">                        
                         <div class="col-md-3 widget">
                             <h3 class="widget-title">Contact</h3>
                             <div class="widget-body">
@@ -160,7 +147,6 @@
                                 </p>	
                             </div>
                         </div>
-
                         <div class="col-md-3 widget">
                             <h3 class="widget-title">Follow me</h3>
                             <div class="widget-body">
@@ -172,7 +158,6 @@
                                 </p>	
                             </div>
                         </div>
-
                         <div class="col-md-6 widget">
                             <h3 class="widget-title">Text widget</h3>
                             <div class="widget-body">
@@ -184,11 +169,9 @@
                     </div> <!-- /row of widgets -->
                 </div>
             </div>
-
             <div class="footer2">
                 <div class="container">
                     <div class="row">
-                        
                         <div class="col-md-6 widget">
                             <div class="widget-body">
                                 <p class="simplenav">
@@ -200,7 +183,6 @@
                                 </p>
                             </div>
                         </div>
-
                         <div class="col-md-6 widget">
                             <div class="widget-body">
                                 <p class="text-right">
@@ -208,11 +190,9 @@
                                 </p>
                             </div>
                         </div>
-
                     </div> <!-- /row of widgets -->
                 </div>
             </div>
-
         </footer>	
         <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
