--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Accueil</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
         <meta name="author" content="Sergey Pozhilov (GetTemplate.com)" />
         <title>Progressus - Free business bootstrap template by GetTemplate</title>
-        <link rel="shortcut icon" href="{{ asset('assets/images/gt_favicon.png') }}" />
+        <link rel="shortcut icon" 
+            href="{{ asset('assets/images/logo.png') }}" />
         <script type="text/javascript" 
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+        </script>
         <script
             src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
             integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
             crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" type="text/css">
+        <link rel="stylesheet" 
+            href="//code.jquery.com/ui/1.8.10/themes/smoothness/jquery-ui.css" 
+            type="text/css" />
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
         <link rel="stylesheet" href="{{ asset('assets/css/font-awesome.min.css') }}" />
         <!-- Custom styles for our template -->
-        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-theme.css') }}" media="screen" >
-        <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-theme.css') }}" 
+            media="screen" />
+        <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}" />
+        <link rel="stylesheet" href="{{asset('assets/styles/property.css')}}" />
+        <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
     </head>
     <body>
         {% include 'composants/navbar.html.twig' %}
         <!-- Header -->
-        <header id="head">
-            <div class="container">
-                <div class="row">
-                    <h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
-                    <p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
-                    <p><a class="btn btn-default btn-lg" role="button">MORE INFO</a> <a class="btn btn-action btn-lg" role="button">DOWNLOAD NOW</a></p>
-                </div>
-            </div>
-        </header>
+        {% include 'composants/header.html.twig' %}
         <!-- /Header -->
-        <!-- Intro -->
-        <div class="container text-center">
-            <br> <br>
-            <h2 class="thin">The best place to tell people why they are here</h2>
-            <p class="text-muted">
-                The difference between involvement and commitment is like an eggs-and-ham breakfast:<br> 
-                the chicken was involved; the pig was committed.
-            </p>
-        </div>
-        <!-- /Intro-->        
         <!-- Highlights - jumbotron -->
         <div class="jumbotron top-space">
             <div class="container">
@@ -78,45 +67,16 @@
             </div>
         </div>
         <!-- /Highlights -->
-        <!-- container -->
-        <div class="container">
-
-                <h2 class="text-center top-space">Frequently Asked Questions</h2>
-                <br>
-
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h3>Which code editor would you recommend?</h3>
-                        <p>I'd highly recommend you <a href="http://www.sublimetext.com/">Sublime Text</a> - a free to try text editor which I'm using daily. Awesome tool!</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <h3>Nice header. Where do I find more images like that one?</h3>
-                        <p>
-                            Well, there are thousands of stock art galleries, but personally, 
-                            I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
-                            and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
-                    </div>
-                </div> <!-- /row -->
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3>Can I use it to build a site for my client?</h3>
-                    <p>
-                        Yes, you can. You may use this template for any purpose, just don't forget about the <a href="http://creativecommons.org/licenses/by/3.0/">license</a>, 
-                        which says: "You must give appropriate credit", i.e. you must provide the name of the creator and a link to the original template in your work. 
-                    </p>
-                </div>
-                <div class="col-sm-6">
-                    <h3>Can you customize this template for me?</h3>
-                    <p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please note, my services are not cheap.</p>
-                </div>
-            </div> <!-- /row -->
-            <div class="jumbotron top-space">
-                <h4>Dicta, nostrum nemo soluta sapiente sit dolor quae voluptas quidem doloribus recusandae facere magni ullam suscipit sunt atque rerum eaque iusto facilis esse nam veniam incidunt officia perspiciatis at voluptatibus. Libero, aliquid illum possimus numquam fuga.</h4>
-                <p class="text-right"><a class="btn btn-primary btn-large">Learn more »</a></p>
-            </div>
+        <!-- Intro -->
+        <div class="container text-center">
+            <br> <br>
+            <h2 class="thin">The best place to tell people why they are here</h2>
+            <p class="text-muted">
+                The difference between involvement and commitment is like an eggs-and-ham breakfast:<br> 
+                the chicken was involved; the pig was committed.
+            </p>
         </div>
-        <!-- /container -->        
+        <!-- /Intro-->
         <!-- Social links. @TODO: replace by link/instructions in template -->
         <section id="social">
             <div class="container">
@@ -137,32 +97,27 @@
             <div class="footer1">
                 <div class="container">
                     <div class="row">                        
-                        <div class="col-md-3 widget">
+                        <div class="col-md-6 text-center widget">
                             <h3 class="widget-title">Contact</h3>
                             <div class="widget-body">
-                                <p>+234 23 9873237<br>
-                                    <a href="mailto:#">some.email@somewhere.com</a><br>
+                                <p><i class="fas fa-phone-alt"></i> : 07 66 63 80 02<br>
+                                    <i class="fas fa-envelope"></i> : <a href="mailto:#frederic.patouillard@outlook.fr">frederic.patouillard@outlook.fr</a><br>
                                     <br>
-                                    234 Hidden Pond Road, Ashland City, TN 37015
+                                    <i class="fas fa-map-marker-alt"></i> : 234 Hidden Pond Road, Ashland City, TN 37015
                                 </p>	
                             </div>
                         </div>
-                        <div class="col-md-3 widget">
-                            <h3 class="widget-title">Follow me</h3>
+                        <div class="col-md-6 text-center widget">
+                            <h3 class="widget-title">Commentaire</h3>
                             <div class="widget-body">
-                                <p class="follow-me-icons">
-                                    <a href=""><i class="fa fa-twitter fa-2"></i></a>
-                                    <a href=""><i class="fa fa-dribbble fa-2"></i></a>
-                                    <a href=""><i class="fa fa-github fa-2"></i></a>
-                                    <a href=""><i class="fa fa-facebook fa-2"></i></a>
-                                </p>	
-                            </div>
-                        </div>
-                        <div class="col-md-6 widget">
-                            <h3 class="widget-title">Text widget</h3>
-                            <div class="widget-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-                                <p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+                                <form method="" action="">
+                                    <div class="form-group">
+                                        <textarea placeholder="Veuillez nous laisser afin qu'on améliore notre livraison" name="comments" class="text-area"></textarea>
+                                    </div>
+                                    <div class="form-group text-center">
+                                        <input type="submit" value="Envoyer" class="btn btn-success"/>
+                                    </div>
+                                </form>
                             </div>
                         </div>
 
@@ -186,7 +141,7 @@
                         <div class="col-md-6 widget">
                             <div class="widget-body">
                                 <p class="text-right">
-                                    Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+                                    Copyright &copy; Hop Hop Hop Livraison. Designed by <a href="http://gettemplate.com/" rel="designer">Hop Hop Hop Livraison</a> 
                                 </p>
                             </div>
                         </div>
