--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -8,37 +8,24 @@
                 <span class="icon-bar"></span> 
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.png" alt="Progressus HTML5 template">
+            <a class="navbar-brand text-orange" href="/">
+                Hop Hop Hop Livraison
             </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active">
-                    <a href="#">Home</a>
+                    <a href="/"class="text-orange">Home</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="#about" class="text-orange">About</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        More Pages 
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="sidebar-left.html">Left Sidebar</a>
-                        </li>
-                        <li class="active">
-                            <a href="sidebar-right.html">Right Sidebar</a>
-                        </li>
-                    </ul>
+                    <a href="#planning" class="dropdown-toggle text-orange"
+                        data-toggle="dropdown">Planning</a>
                 </li>
                 <li>
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li>
-                    <a class="btn" href="signin.html">SIGN IN / SIGN UP</a>
+                    <a href="#contact" class="text-orange">Contact</a>
                 </li>
             </ul>
         </div>
