Finish front Forms and attack autocomplete with class and style for php
Task :
 - JS : Récupérer depuis API => zone + vile.' '.code postal
- PHP : index() method=> Récupérer zone, background, color
- PHP : passer (zone, bgcolor, color) a la vue sous format tableau
- HTML/TWIG : Récupérer tableau et parcourir afin d'afficher le style de l'autocomplete

--- a/public/assets/styles/property.css
+++ b/public/assets/styles/property.css
@@ -4,4 +4,34 @@
 .text-area{
     width: 300px;
 }
-  
+
+.font-italic{
+    font-style: italic;
+}
+.font-bold{
+    font-weight: bold;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button,
+input[type=number]  {
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+  margin: 0;
+}
+.text-center{
+    text-align-last:center;
+}
+option {
+    text-align:center;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.mt{
+    margin-top: 2%;
+}
+.mb{
+    margin-bottom: 2%;
+}
