--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -15,17 +15,19 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active">
-                    <a href="/"class="text-orange">Home</a>
+                    <a href="/" id="links" class="text-orange">Home</a>
                 </li>
                 <li>
-                    <a href="#about" class="text-orange">About</a>
+                    <a href="#about" id="links" class="text-orange">About</a>
+                </li>
+                <li>
+                    <a href="#provider" id="links" class="text-orange">Fournisseurs</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#planning" class="dropdown-toggle text-orange"
-                        data-toggle="dropdown">Planning</a>
+                    <a href="#planning" id="links" class="text-orange">Planning</a>
                 </li>
                 <li>
-                    <a href="#contact" class="text-orange">Contact</a>
+                    <a href="#contact" id="links" class="text-orange">Contact</a>
                 </li>
             </ul>
         </div>
