--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top headroom" >
+<div class="navbar navbar-inverse navbar-fixed-top headroom menu">
     <div class="container">
         <div class="navbar-header">
             <!-- Button for smallest screens -->
