--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,24 +7,24 @@
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ asset('css/open-iconic-bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/animate.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/open-iconic-bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/animate.css') }}">
     
-    <link rel="stylesheet" href="{{ asset('css/owl.carousel.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/owl.theme.default.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/magnific-popup.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/owl.carousel.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/owl.theme.default.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/magnific-popup.css') }}">
 
-    <link rel="stylesheet" href="{{ asset('css/aos.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/aos.css') }}">
 
-    <link rel="stylesheet" href="{{ asset('css/ionicons.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/ionicons.min.css') }}">
 
-    <link rel="stylesheet" href="{{ asset('css/bootstrap-datepicker.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/jquery.timepicker.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-datepicker.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/jquery.timepicker.css') }}">
 
     
-    <link rel="stylesheet" href="{{ asset('css/flaticon.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/icomoon.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/flaticon.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
   </head>
   <body>
     
@@ -49,7 +49,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <div class="hero-wrap" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap" style="background-image: url('{{ asset('assets/images/bg_1.jpg') }}');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center">
@@ -281,7 +281,7 @@
     		<div class="row">
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-1.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-1.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -299,7 +299,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-2.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-2.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -317,7 +317,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-3.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-3.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -335,7 +335,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-4.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-4.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -354,7 +354,7 @@
 
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-5.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-5.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -372,7 +372,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-6.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-6.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -390,7 +390,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-7.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-7.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -408,7 +408,7 @@
     			</div>
     			<div class="col-md-3">
     				<div class="car-wrap ftco-animate">
-    					<div class="img d-flex align-items-end" style="background-image: url(images/car-8.jpg);">
+    					<div class="img d-flex align-items-end" style="background-image: url({{asset('assets/images/car-8.jpg')}});">
     						<div class="price-wrap d-flex">
     							<span class="rate">$25</span>
     							<p class="from-day">
@@ -428,7 +428,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section services-section img" style="background-image: url(images/bg_2.jpg);">
+    <section class="ftco-section services-section img" style="background-image: url({{asset('assets/images/bg_2.jpg')}});">
     	<div class="overlay"></div>
     	<div class="container">
     		<div class="row justify-content-center mb-5">
@@ -491,7 +491,7 @@
             <div class="carousel-testimony owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({{asset('assets/images/person_1.jpg')}})">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -502,7 +502,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/person_2.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({{asset('assets/images/person_2.jpg')}})">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -513,7 +513,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/person_3.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({{asset('assets/images/person_3.jpg')}})">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -524,7 +524,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({{asset('assets/images/person_1.jpg')}})">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -535,7 +535,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap text-center py-4 pb-5">
-                  <div class="user-img mb-4" style="background-image: url(images/person_1.jpg)">
+                  <div class="user-img mb-4" style="background-image: url({{asset('assets/images/person_1.jpg')}})">
                   </div>
                   <div class="text pt-4">
                     <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
