--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="{{ asset('assets/css/flaticon.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+    {# Links to font-awesome #}
+    <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     
