--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,83 +25,35 @@
     <link rel="stylesheet" href="{{ asset('assets/css/flaticon.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/styles/property.css') }}">
     {# Links to font-awesome #}
     <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    
-	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Auto<span>road</span></a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="car.html" class="nav-link">Our Car</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
-    <!-- END nav -->
-    
     <div class="hero-wrap" style="background-image: url('{{ asset('assets/images/background.jpg') }}');" data-stellar-background-ratio="0.5">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row no-gutters slider-text justify-content-start align-items-center">
-          <div class="col-lg-6 col-md-6 ftco-animate d-flex align-items-end">
-          	<div class="text">
-	            <h1 class="mb-4">Now <span>It's easy for you</span> <span>rent a car</span></h1>
-	            <p style="font-size: 18px;">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts</p>
-	            <a href="https://vimeo.com/45830194" class="icon-wrap popup-vimeo d-flex align-items-center mt-4">
-	            	<div class="icon d-flex align-items-center justify-content-center">
-	            		<span class="ion-ios-play"></span>
-	            	</div>
-	            	<div class="heading-title ml-5">
-		            	<span>Easy steps for renting a car</span>
-	            	</div>
-	            </a>
-            </div>
-          </div>
-          <div class="col-lg-2 col"></div>
-          <div class="col-lg-4 col-md-6 mt-0 mt-md-5 d-flex">
-          	<form action="#" class="request-form ftco-animate">
-          		<h2>Make your trip</h2>
-	    				<div class="form-group">
-	    					<label for="" class="label">Pick-up location</label>
-	    					<input type="text" class="form-control" placeholder="City, Airport, Station, etc">
-	    				</div>
-	    				<div class="form-group">
-	    					<label for="" class="label">Drop-off location</label>
-	    					<input type="text" class="form-control" placeholder="City, Airport, Station, etc">
-	    				</div>
-	    				<div class="d-flex">
-	    					<div class="form-group mr-2">
-	                <label for="" class="label">Pick-up date</label>
-	                <input type="text" class="form-control" id="book_pick_date" placeholder="Date">
-	              </div>
-	              <div class="form-group ml-2">
-	                <label for="" class="label">Drop-off date</label>
-	                <input type="text" class="form-control" id="book_off_date" placeholder="Date">
-	              </div>
-              </div>
-              <div class="form-group">
-                <label for="" class="label">Pick-up time</label>
-                <input type="text" class="form-control" id="time_pick" placeholder="Time">
-              </div>
-	            <div class="form-group">
-	              <input type="submit" value="Search Vehicle" class="btn btn-primary py-3 px-4">
-	            </div>
-	    			</form>
-          </div>
+      {% include 'composants/navbar.html.twig' %}
+      <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="about.html" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="pricing.html" class="nav-link">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="car.html" class="nav-link">Our Car</a>
+                </li>
+                <li class="nav-item">
+                    <a href="blog.html" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
+            </ul>
         </div>
-      </div>
     </div>
 
     <section class="ftco-section ftco-no-pb ftco-no-pt">
@@ -555,7 +507,7 @@
 		<section class="ftco-section ftco-no-pt ftco-no-pb">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
+					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url({{ asset('assets/images/about.jpg') }});">
 					</div>
 					<div class="col-md-6 wrap-about py-md-5 ftco-animate">
 	          <div class="heading-section mb-5 pl-md-5">
@@ -582,7 +534,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('{{asset('assets/images/image_1.jpg')}}');">
               </a>
               <div class="text pt-4">
               	<div class="meta mb-3">
@@ -597,7 +549,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('{{asset('assets/images/image_2.jpg')}}');">
               </a>
               <div class="text pt-4">
               	<div class="meta mb-3">
@@ -612,7 +564,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('{{asset('assets/images/image_3.jpg')}}');">
               </a>
               <div class="text pt-4">
               	<div class="meta mb-3">
