--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,6 @@
     <link rel="apple-touch-icon" href="{{ asset('assets/img/ico/apple-touch-icon-57x57.png') }}">
 
     <title>Kompleet by Distinctive Themes</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ asset('assets/css/animate.css') }}" rel="stylesheet">
@@ -28,6 +27,7 @@
     <!-- Custom Fonts -->
     <link href="{{ asset('assets/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ asset('assets/css/pe-icons.css" rel="stylesheet') }}">
+    <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -43,44 +43,26 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-fixed-top fadeInDown" id="navbar" data-wow-delay="0.5s">
-            <div class="top-bar smoothie hidden-xs">
-                <div class="container">
-                    <div class="clearfix">
-                        <ul class="list-inline social-links wow pull-left">
-                            <li>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-behance"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-
-                        <div class="pull-right text-right">
-                            <ul class="list-inline">
-                                <li>
-                                    <div><i class="fa fa-envelope-o"></i> email@domain.com</div>
-                                </li>
-                                <li>
-                                    <div class="meta-item"><i class="fa fa-mobile"></i> +44 8780 648 605</div>
-                                </li>
-                            </ul>
+            <div class="container">
+                <div class="top-bar smoothie hidden-xs">
+                    <div class="row">
+                        <div class="col-sm-10 col-sm-offset-1">
+                            <div class="row">
+                                <div class="flexContainer">
+                                    <div>
+                                        <button type="button" class="btn-outline"><i class="fas fa-user"></i> Espace Client</button>
+                                    </div>
+                                    <div>
+                                        <button type="button" class="btn-devis">Demandez un devis</button>
+                                    </div>
+                                    <div>
+                                        <button type="button" class="btn-light"><i class="fas fa-phone-alt"></i> 06 29 64 09 60</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navigation">
