--- a/public/assets/styles/property.css
+++ b/public/assets/styles/property.css
@@ -26,3 +26,69 @@ input[type=number]  {
 #navbar{
     background-color: #585858;
 }
+
+.btn-outline{
+    border:1px solid #fff;
+    background-color: transparent;
+    margin-right: 4%;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border-radius: 4px;
+}
+
+.btn-devis{
+    border-color:#FF7F00;
+    background-color: #FF7F00;
+    color:#FFF;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.btn-light{
+    color: #212529;
+    background-color: #fff;
+    margin-left: 4%;
+    border-color: #fff;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.flexContainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
