--- a/templates/composants/informations.html.twig
+++ b/templates/composants/informations.html.twig
@@ -1,25 +1,24 @@
-<div class="header-top_area d-none d-lg-block">
+<div class="header-top_area d-none d-lg-block main-header-area">
     <div class="container">
         <div class="row">
-            <div class="col-xl-6 col-md-6 ">
-                <div class="social_media_links">
-                    <a href="#">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fa fa-google-plus"></i>
-                    </a>
-                </div>
+            <div class="col-md-6">
+                <h1 class="text-orange">
+                    Hop Hop Hop Livraison
+                </h1>
             </div>
-            <div class="col-xl-6 col-md-6">
-                <div class="short_contact_list">
-                    <ul>
-                        <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                        <li><a href="#"> <i class="fa fa-phone"></i> 1601-609 6780</a></li>
-                    </ul>
+            <div class="col-md-6 text-white">
+                <div class="row">
+                    <div class="containerWrapper col-md-12">
+                        <div>
+                            <button type="button" class="btn btn-outline-light"><i class="fas fa-user"></i> Espace Client</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-orange">Demandez un devis</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-light"><i class="fas fa-phone-alt"> 07 66 63 80 02</i></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
