Modify navbar new template for Title and informations

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -980,7 +980,7 @@ h3 {
 
 /* line 119, ../../Arafath/CL/CL October/213. Business/HTML/scss/_header.scss */
 .header-area .main-header-area .Appointment .book_btn a:hover {
-  background: #ff9900;
+  background: #ff5e13;
   color: #fff;
   border: 1px solid #ff9900;
 }
