--- a/templates/composants/informations.html.twig
+++ b/templates/composants/informations.html.twig
@@ -1,12 +1,12 @@
-<div class="header-top_area d-none d-lg-block main-header-area">
+<div class="header-top_area d-none d-lg-block main-header-area main-header-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <h1 class="text-orange">
                     Hop Hop Hop Livraison
                 </h1>
             </div>
-            <div class="col-md-6 text-white">
+            <div class="col-md-7 text-white">
                 <div class="row">
                     <div class="containerWrapper col-md-12">
                         <div>
