--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -2,18 +2,16 @@
     <div class="container">
         <div class="header_bottom_border">
             <div class="row align-items-center">
-                <div class="col-xl-3 col-lg-2">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="{{asset('assets/img/logo.png')}}" alt="">
-                        </a>
-                    </div>
+                <div class="col-md-1 text-center">
+                    <h1 class="text-orange">
+                        HHHL
+                    </h1>
                 </div>
-                <div class="col-xl-6 col-lg-7">
+                <div class="col-md-10">
                     <div class="main-menu  d-none d-lg-block">
                         <nav>
                             <ul id="navigation">
-                                <li><a class="active" href="index.html">home</a></li>
+                                <li><a class="active" href="#">Présentation</a></li>
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="service.html">Services</a></li>
                                 <li><a href="#">blog <i class="ti-angle-down"></i></a>
@@ -34,7 +32,7 @@
                         </nav>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                <div class="col-md-1 d-none d-lg-block">
                     <div class="Appointment">
                         <div class="search_button">
                             <a href="#">
