--- a/templates/composants/informations.html.twig
+++ b/templates/composants/informations.html.twig
@@ -10,10 +10,16 @@
                 <div class="row">
                     <div class="containerWrapper col-md-12">
                         <div>
-                            <button type="button" class="btn btn-outline-light"><i class="fas fa-calendar-alt"></i> Prise Rdv</button>
+                            <a href="{{path('french_rdv')}}">
+                                <button type="button" class="btn btn-outline-light">
+                                    <i class="fas fa-calendar-alt"></i> Prise Rdv
+                                </button>
+                            </a>
                         </div>
                         <div>
-                            <button type="button" class="btn btn-orange">Demandez un devis</button>
+                            <button type="button" class="btn btn-orange">
+                                Demandez un devis
+                            </button>
                         </div>
                     </div>
                 </div>
