--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -22,6 +22,9 @@
                                 <li>
                                     <a role="menuitem" href="service.html">Services</a>
                                 </li>
+                                <li class="d-lg-none hidden-xl">
+                                    <a href="{{path('french_rdv')}}">Demandez un devis</a>
+                                </li>
                                 <li>
                                     <a role="menuitem" href="{{ path('contact') }}">Contact</a>
                                 </li>
