--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
         <title>busicol</title>
-        <meta name="description" content="">
+        <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{{ asset('assets/styles/property.css') }}">
+        <script src="{{asset('assets/scripts/sendData.js')}}"></script>
         <!-- <link rel="stylesheet" href="css/responsive.css"> -->
     </head>
 
@@ -207,5 +208,7 @@
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="{{asset('assets/scripts/autocomplete.js')}}"></script>
         <script src="{{asset('assets/scripts/inputs.js')}}"></script>
+        <script src="{{asset('assets/scripts/insertQuestions.js')}}"></script>
+        <script src="{{asset('assets/scripts/changeValueOfSelect.js')}}"></script>
     </body>
 </html>
