--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -23,7 +23,7 @@
                                     <a role="menuitem" href="service.html">Services</a>
                                 </li>
                                 <li class="d-lg-none hidden-xl">
-                                    <a href="{{path('french_rdv')}}">Demandez un devis</a>
+                                    <a href="{{path('french_rdv')}}">Prise Rdv</a>
                                 </li>
                                 <li>
                                     <a role="menuitem" href="{{ path('contact') }}">Contact</a>
