start to security

--- a/templates/appoint/index.html.twig
+++ b/templates/appoint/index.html.twig
@@ -35,7 +35,7 @@
                     </div>
                     <div class="col-sm-6 text-left">
                         <input id="phone" 
-                            type="number" class="form-control" 
+                            type="tel" class="form-control"
                             name="phone" min="0"/>
                     </div>
                 </div>
